--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                     <h4 class="headTit text-orange "> Hello World</h4>
                     <h1 class="headName">I'm Maruf Hasan Mujahid</h1>
-                    <p class="headDes"> | Hello ! I'm a full stack web developer from bangladesh | <br>
+                    <p class="headDes"> | Hello ! I'm a Front End web Developer from bangladesh | <br>
                         welcome to my portfolio
                     </p>
 
