--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
                     <h4 class="headTit text-orange "> Hello World</h4>
                     <h1 class="headName">I'm Maruf Hasan Mujahid</h1>
-                    <p class="headDes"> | Hello ! I'm a Front End web Developer from bangladesh | <br>
-                        welcome to my portfolio
+                    <p class="headDes"> | Hello ! I'm a Front End Web Developer from Bangladesh | <br>
+                        Welcome to my portfolio
                     </p>
 
                     <button class="about mb-5 btn bg-info text-light ">More About Me</button>
@@ -80,10 +80,6 @@
                     <h3 class="text-uppercase text-center mb-lg-5 mb-md-3">Profile</h3>
                     <h4>Full Name:</h4>
                     <h5 class="mb-4">Maruf Hasan Mujahid</h5>
-
-
-                    <h4>Date of Birth:</h4>
-                    <h5 class="mb-4">13 Dec 1998</h5>
 
                     <h4>Email:</h4>
                     <h5 class="mb-4">mh.mujahid7758@gmail.com</h5>
